--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "jest": "^22.4.3"
+    "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.3",
+    "jest": "^22.4.3",
+    "regenerator-runtime": "^0.11.1"
   }
 }
